@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: cons_linear.c,v 1.226 2006/09/15 02:00:05 bzfpfend Exp $"
+#pragma ident "@(#) $Id: cons_linear.c,v 1.227 2006/12/07 20:03:09 bzfpfend Exp $"
 
 /**@file   cons_linear.c
  * @brief  constraint handler for linear constraints
@@ -6533,7 +6533,7 @@ SCIP_DECL_CONSPRESOL(consPresolLinear)
    /* process single constraints */
    firstchange = INT_MAX;
    firstupgradetry = INT_MAX;
-   for( c = 0; c < nconss && !cutoff && !SCIPpressedCtrlC(scip); ++c )
+   for( c = 0; c < nconss && !cutoff && !SCIPisStopped(scip); ++c )
    {
       int npresolrounds;
 
@@ -6694,7 +6694,7 @@ SCIP_DECL_CONSPRESOL(consPresolLinear)
    {
       if( conshdlrdata->maxpresolpairrounds == -1 || nrounds < conshdlrdata->maxpresolpairrounds )
       {
-         for( c = firstchange; c < nconss && !cutoff && !SCIPpressedCtrlC(scip); ++c )
+         for( c = firstchange; c < nconss && !cutoff && !SCIPisStopped(scip); ++c )
          {
             if( SCIPconsIsActive(conss[c]) && !SCIPconsIsModifiable(conss[c]) )
             {
