@@ -15,6 +15,7 @@ interface:
 - new method SCIPnodeGetDomchg()
 - new methods SCIPboundchgGetNewbound(), SCIPboundchgGetVar(), SCIPboundchgGetBoundchgtype(),
   SCIPboundchgGetBoundtype(), SCIPboundchgIsRedundant(), SCIPdomchgGetNBoundchgs(), SCIPdomchgGetBoundchg()
+- new method SCIPisStopped()
 
 plugins:
 - improved performance of linear constraint propagation by delaying some floor/ceil calculations
@@ -41,6 +42,7 @@ parameters:
 
 features:
 - improved performance of clique cut separator
+- presolving now better respects time limit
 
 fixed bugs:
 - SCIPgetAvgPseudocostCount() and SCIPgetAvgPseudocostCountCurrentRun() now return the average over all integer variables instead
